@@ -18,6 +18,7 @@ import org.springframework.http.MediaType;
 import org.springframework.http.codec.json.Jackson2JsonDecoder;
 import org.springframework.http.codec.json.Jackson2JsonEncoder;
 import org.springframework.stereotype.Component;
+import org.springframework.web.reactive.function.client.ExchangeFilterFunction;
 import org.springframework.web.reactive.function.client.ExchangeStrategies;
 import org.springframework.web.reactive.function.client.WebClient;
 
@@ -29,7 +30,6 @@ import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Executor;
 import java.util.concurrent.Executors;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Component
@@ -43,8 +43,9 @@ public class PersonConsumer {
     public PersonConsumer(
             ObjectMapper objectMapper, @Value("${consumers.person.threads}") Integer threads,
             PersonServiceProperties personServiceProperties,
-            TokenExchange tokenExchange
-    ) {
+            TokenExchange tokenExchange,
+            ExchangeFilterFunction metricsWebClientFilterFunction) {
+
         this.serviceProperties = personServiceProperties;
         this.tokenExchange = tokenExchange;
 
@@ -60,10 +61,11 @@ public class PersonConsumer {
                 .builder()
                 .exchangeStrategies(jacksonStrategy)
                 .baseUrl(personServiceProperties.getUrl())
+                .filter(metricsWebClientFilterFunction)
                 .build();
+
         this.executor = Executors.newFixedThreadPool(threads);
     }
-
 
     private CompletableFuture<Person> hentPerson(String ident, AccessToken accessToken) {
         var command = new GetPersonCommand(webClient, ident, accessToken.getTokenValue(), Persondatasystem.PDL, null);
@@ -76,7 +78,7 @@ public class PersonConsumer {
     public List<Person> hentPersoner(Set<String> identer) {
         AccessToken accessToken = tokenExchange.exchange(serviceProperties).block();
         List<Person> personer = new ArrayList<>();
-        var futures = identer.stream().map(ident -> hentPerson(ident, accessToken)).collect(Collectors.toList());
+        var futures = identer.stream().map(ident -> hentPerson(ident, accessToken)).toList();
         for (CompletableFuture<Person> future : futures) {
             try {
                 Person person = future.get();
@@ -99,8 +101,7 @@ public class PersonConsumer {
                         return null;
                     }
                 }, executor)
-        ).collect(Collectors.toList());
-
+        ).toList();
 
         List<TpsIdent> opprettedeIdenter = futures.stream().map(future -> {
             try {
@@ -109,7 +110,7 @@ public class PersonConsumer {
                 log.error("Noe gikk galt ved henting av resultat fra tråd", e);
                 return null;
             }
-        }).collect(Collectors.toList());
+        }).toList();
 
         if (opprettedeIdenter.stream().anyMatch(Objects::isNull)) {
             throw new UgyldigIdentException("Klarte ikke å opprette alle identer");
